# sprig-config

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SETUP.md  combined_documentation.md  open_ide.sh  open_ide2.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: FUNDING.yml
docs/: _config.yml  cli.md  configuration.md  (+13 more)
sprig-config-module/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  Makefile  README-gitlab.md  README-pypi.md  README.md  ROADMAP.md  SprigConfig_ENC_BestPractices.md  combine_md_to_pdf.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
sprig-config-module/config/: application-dev.yml  application-prod.yml  application-test.yml  application.yml  features.yml  override.yml
sprig-config-module/docs/: AI_Info.md  GitLab.md  PyPI.md  README.md  README_Developer_Guide.md  SprigConfig_ENC_BestPractices.md  building_documentation.md  code-metrics.md  configuration-injection.md  dependency-injection-explained.md  dependency-management.md  git_skip_worktree_for_test_config_files.md  gitlab-issue-cve-2026-44431-44432.md  gitlab-issue-cve-2026-8643.md  gitlab-issue-ghsa-6v7p-g79w-8964.md  gitlab-mr-cve-2026-44431-44432.md  gitlab-mr-ghsa-6v7p-g79w-8964.md  gitlab-mr-pipeline-and-pip-cve-2026-8643.md  index.md  migration_guide.md  release_checklist.md
sprig-config-module/docs/security/: SprigConfig_ENC_Best_Practices.md
sprig-config-module/examples/: README.md
sprig-config-module/examples/basic/: README.md  example.py
sprig-config-module/examples/basic/config/: application.yml
sprig-config-module/examples/profiles/: README.md  example.py
sprig-config-module/examples/profiles/config/: application-dev.yml  application-prod.yml  application-test.yml  application.yml
sprig-config-module/examples/secrets/: README.md  example.py
sprig-config-module/examples/secrets/config/: application.yml
sprig-config-module/examples/web-app/: README.md  app.py  requirements.txt
sprig-config-module/examples/web-app/config/: application-dev.yml  application-prod.yml  application.yml
sprig-config-module/scripts/: create-release-tag.sh  prepare-testpypi-version.sh  run_pytest.sh  setup-poetry-env.ps1  upload-to-pypi.sh  verify-release-tag.sh
sprig-config-module/src/sprigconfig/: __init__.py  cli.md  cli.py  config.py  config_loader.md  config_loader.py  config_singleton.py  deepmerge.py  exceptions.py  injection.md  injection.py  lazy_secret.py  loader.py  utils.py
sprig-config-module/src/sprigconfig/parsers/: toml_parser.md
sprig-config-module/src/sprigconfig/validation/: __init__.py  validator.py
sprig-config-module/tests/: README_Test_Suite.md  application-list.json  conftest.md  conftest.py  test_cli.md  test_cli.py  test_config.md  test_config.py  test_config_singleton.md  test_config_singleton.py  test_crypto.py  test_deep_merge.md  test_deep_merge.py  test_full_merge_provenance.md  test_full_merge_provenance.py  test_import_trace.md  test_import_trace.py  test_injection.md  test_injection.py  test_instantiate.md  test_instantiate.py  test_integration.md  test_integration.py  test_loader.py  test_loader_integration.py  test_meta.md  test_meta.py  test_meta_sources.md  test_meta_sources.py  test_path_traversal.md  test_path_traversal.py  test_positional_import_nested_merges_in_place.md  test_positional_import_nested_merges_in_place.py  test_profile_behavior.md  test_profiles.py  test_profiles_integration.py  test_target_config.md  test_target_config.py  test_toml_support.md  test_toml_support.py  (+2 more)
sprig-config-module/tests/config/: application-chain.json  application-chain.toml  application-chain.yml  application-circular.json  application-circular.yml  application-dev.json  application-dev.toml  application-dev.yml  application-envtest.json  application-envtest.yml  application-list.json  application-list.yml  application-nested.json  application-nested.yml  application-secrets.json  application-secrets.yml  application-suppress.json  application-suppress.yml  application-target-test.json  application-target-test.toml  application-target-test.yml  application-user-meta.json  application-user-meta.yml  application.json  application.toml  application.yml  rules_for_config.md
sprig-config-module/tests/config/chains/: chain1.json  chain1.toml  chain1.yml  chain2.json  chain2.toml  chain2.yml  chain3.json  chain3.toml  chain3.yml
sprig-config-module/tests/config/circular/: a.json  a.yml  b.json  b.yml
sprig-config-module/tests/config/imports/: common.json  common.toml  common.yml  job-default.json  job-default.toml  job-default.yml  list-override.json  list-override.yml  misc.json  misc.yml  nested.json  nested.yml
sprig-config-module/tests/config/targets/adapters/: mssql-adapter.json  mssql-adapter.toml  mssql-adapter.yml
sprig-config-module/tests/db/mssql/: mssql_database_adapter.py
sprig-config-module/tests/utils/: config_test_utils.md  config_test_utils.py
sprig-tools/: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  sync_pytest_config.py
sprig-tools/notes/: format-specific-imports.md
sprig-tools/scripts/: reqs_to_toml.py  run_pytest.sh
sprig-tools/src/sprigtools/: cli.py  enc_util.py  generate_enc_test_values.py  reqs_to_toml.py  secret_cli.py  secret_quickdemo.py  secrets_cli.py  sync_pytest_config.py
sprig-tools/tests/: conftest.py  test_cli_sync_all.py  test_cli_sync_pytest.py
sprig-tools/tmp-smoke/: pyproject.toml  requirements.txt
(+15 files in other folders)
