[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprig-config"
version = "0.1.0"
description = "Spring-like deep merge configuration loader for Python"
authors = [{ name="Derik G. Wilson" }]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "PyYAML>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
