[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sprig-config"
version = "0.1.0"
description = "Spring-like deep merge configuration loader for Python"
authors = [
    { name = "Derik G. Wilson" },
]
readme = "README.md"
dependencies = [
    "PyYAML>=6.0.2",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "colorama>=0.4.6",
    "coverage>=7.10.1",
    "iniconfig>=2.1.0",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "Pygments>=2.19.2",
    "pyproject_hooks>=1.2.0",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = "tests"
pythonpath = "src"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]
