[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "sprig-tools"
version = "0.1.0"
description = "Helper utilities for SprigConfig (e.g., pytest sync, requirements-to-TOML)"
authors = [
    { name = "Derik G. Wilson" },
]
readme = "README.md"
dependencies = [
    "tomli>=2.2.1",
    "tomli_w>=1.2.0",
]

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "colorama>=0.4.6",
    "coverage>=7.10.1",
    "iniconfig>=2.1.0",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "Pygments>=2.19.2",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
]

[project.scripts]
sprig-tool = "sprigtools.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = "tests"
pythonpath = "src"
